# codex-taskboard

./: .gitignore  README.md  pyproject.toml
.venv_copied_backup/: pyvenv.cfg
docs/: ADMIN_MANUAL_ZH.md  AGENT_DISPATCH_README_ZH.md  AGENT_WORKFLOW_SPEC_ZH.md  ARCHITECTURE_REVIEW_20260421_ZH.md  CHANGELOG_20260425_CONTINUOUS_CLOSEOUT_ACTIVE_SESSIONS_ZH.md  CONTINUOUS-RESEARCH-PARKED-WATCHDOG-REPAIR-20260411.md  DOCKER_AGENT_AUTOMATION_MANUAL_ZH.md  DOCKER_RESULT_ONLY_MANUAL_ZH.md  DOCKER_USER_MANUAL_ZH.md  LANGGRAPH_ADAPTER_ZH.md  PARKED-DEADLOCK-SUCCESSOR-BOOTSTRAP-DESIGN-20260411.md  REDEPLOY_GUIDE_ZH.md  USER_MANUAL.md  phase-3-parked-continuity-plan.md  prompt-scene-matrix.md
docs/prompt-previews/: closeout.txt  execution.txt  planning.txt  protocol-repair.txt  reflow-batch-continuous.txt  reflow-batch.txt  resume.txt  (+2 more)
extras/: benchmark_api_queue_cache.py  codex_taskboard_client.py
prompts/: redispatch_unfinished_agent.md  taskboard_agent_workflow_notice_zh.md  taskboard_runtime_prompt_zh.toml
tests/: test_api_benchmark.py  test_api_security.py  test_api_server.py  test_automation_state.py  test_cleanup.py  test_dashboard.py  test_dispatch_serial.py  test_executors.py  test_followups.py  test_langgraph_adapter.py  test_legacy.py  test_process_runtime.py  test_prompt_assets.py  test_queue_policy.py  test_resume.py  test_scheduler_dispatch.py  test_scheduler_readiness.py  test_scheduler_resources.py  test_service_manager.py  test_session_migration.py  test_session_runtime.py  test_subagent.py  test_task_modules.py  test_task_payloads.py  test_task_storage.py
(+34 files in other folders)
