[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-taskboard"
version = "0.1.0"
description = "Tmux-backed task orchestration and terminal dashboard for Codex agents on Ubuntu"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex + Awei" }
]
keywords = ["codex", "tmux", "orchestration", "dashboard", "agent"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Monitoring",
  "Topic :: Software Development :: Build Tools"
]

[project.scripts]
codex-taskboard = "codex_taskboard.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
